[tool.poetry]
name = "test-actions"
version = "0.2.1"
description = ""
authors = ["Pablo Roldan <pablo.roldan@devo.com>"]
readme = "README.md"
packages = [{include = "test_actions"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
