[tool.poetry]
name = "test-actions"
version = "0.2.2"
description = ""
authors = ["Pablo Roldan <pablo.roldan@devo.com>"]
readme = "README.md"
packages = [{include = "test_actions"}]

[tool.poetry.dependencies]
python = "^3.8"
Sphinx = "^5.3.0"
sphinx-rtd-dark-mode = "^1.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
